# poetry_python_template

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yaml
poetry_python_template/: main.py
tests/: test_main.py
