[tool.poetry]
name = "poetry-python-template"
version = "0.1.0"
description = ""
authors = ["haerschKe <kevin.hirschmann1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
